--- a/x360ce.App.WPF/App.xaml
+++ b/x360ce.App.WPF/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:x360ce.App"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+            <ResourceDictionary>
+                <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Themes/Generic.xaml"/>
+                </ResourceDictionary.MergedDictionaries>
+            </ResourceDictionary>
     </Application.Resources>
 </Application>
