--- a/x360ce.Web/Common/JsClasses/System.Web.UI.Interface.debug.css
+++ b/x360ce.Web/Common/JsClasses/System.Web.UI.Interface.debug.css
@@ -50,7 +50,11 @@ Windows program look
 .SWUI_100woh { width: 100%; overflow: hidden; }
 .SWUI_100h { height: 100%; }
 .SWUI_100 { width: 100%; height: 100%; }
-.SWUI_Btn { width: 72px; }
+.SWUI_Btn { width: 72px; background: #e7f5ff; padding: .4em 1em; display: inline-block; position: relative; line-height: normal; margin-right: .1em; cursor: pointer; vertical-align: middle; text-align: center; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; overflow: visible; text-decoration: none; border-top-left-radius: 3px; border-top-right-radius: 3px; border-bottom-left-radius: 3px; border-bottom-right-radius: 3px; }
+.SWUI_Btn::-moz-focus-inner { border: 0; padding: 0; }
+.SWUI_Btn:hover, .SWUI_Btn:focus  { border: 1px solid #ccc; background: #95d0ff; font-weight: normal; color: #2b2b2b; }
+.SWUI_Btn:active { border: 1px solid #003eff; background: #57b4ff; font-weight: normal; color: #fff; }
+.SWUI_Btn:disabled { color: #BBBBBB; background-image: none; cursor: default; }
 
 fieldset.SWUI_Prg { -moz-border-radius: 8px; }
 legend.SWUI_Prg { font: menu; color: #335ea8; }
