Simplified auto-mapping code. Introduced small bug with applying mapping.

--- a/x360ce.Web/Security/Styles/Security.css
+++ b/x360ce.Web/Security/Styles/Security.css
@@ -21,10 +21,7 @@
 	font: Menu;
 }
 
-.SWUI_Security_ItemsListRow 
-{
-	
-}
+/* .SWUI_Security_ItemsListRow { } */
 
 .SWUI_Security_ItemsListRow td {
 	padding: 0 6px 0 4px;
