--- a/x360ce.Web/Security/Styles/Default.css
+++ b/x360ce.Web/Security/Styles/Default.css
@@ -3,18 +3,18 @@
 -----------------------------------------------------------------------------*/
 
 html, body, form { height: 100%; width: 100%; padding: 0; margin: 0; }
-form, html { }
+/* form, html { } */
 
 .HeadLayout { height: 48px; margin: 0; padding: 0; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 .HeadContentLayout { margin: 0 auto; }
 .HeadContentStyle { background-color: #3b5998; }
-.HeadStyle {  }
+/* .HeadStyle {  } */
 .BodyLayout { margin: 0; padding: 0; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
-.BodyStyle { }
+/* .BodyStyle { } */
 .BodyContentLayout { margin: 0 auto; min-height: -webkit-calc(100vh - 48px - 100px); min-height: -moz-calc(100vh - 48px - 100px); min-height: calc(100vh - 48px - 100px); }
 .BodyContentStyle { font-family: 'Segoe UI', 'Verdana'; font-size: 9pt; }
 .FootLayout { height: 100px; }
-.FootStyle { }
+/* .FootStyle { } */
 
 .ContentDiv { display: flex; align-items: center; justify-content: center; }
 .LoginDiv {	width: 100%; max-width: 320px; background-color: #3b5998; padding: 1px; }
